--- a/big_data_prep.ipynb
+++ b/big_data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "1d00bc54",
    "metadata": {
     "scrolled": true,
@@ -10,16 +10,35 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bash: switchml: line 1: syntax error: unexpected end of file\n",
+      "bash: error importing function definition for `switchml'\n",
+      "bash: _moduleraw: line 1: syntax error: unexpected end of file\n",
+      "bash: error importing function definition for `_moduleraw'\n",
+      "bash: _moduleraw: line 1: syntax error: unexpected end of file\n",
+      "bash: error importing function definition for `_moduleraw'\n",
+      "bash: switchml: line 1: syntax error: unexpected end of file\n",
+      "bash: error importing function definition for `switchml'\n",
+      "22/06/30 14:36:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "sc = SparkSession.builder.master(\"local\").appName(\"Test\").getOrCreate()\n",
     "\n",
     "columnName = 'te', 'td', 'sa', 'da', 'sp', 'dp', 'pr', 'flg', 'fwd', 'stos', 'pkt', 'byt', 'label'\n",
-    "data_path = \"/run/user/1000/gvfs/smb-share:server=melchior.local,share=documents/april_week3_csv/uniq/\"\n",
-    "large_data_file = data_path + \"april.week3.csv.uniqblacklistremoved\"\n",
-    "day_one_file = \"april_week3_day1\"\n",
-    "day_two_file = \"april_week3_day2\"\n",
+    "data_path = \"/home/ubuntu/Documents/data/\"\n",
+    "large_data_file = data_path + \"ugr16/uniq/april.week3.csv.uniqblacklistremoved\"\n",
+    "day_one_file = data_path + \"/ugr16/april_week3_day1\"\n",
+    "day_two_file = data_path + \"/ugr16/april_week3_day2\"\n",
     "\n",
     "day_one_date = '2016-04-11'\n",
     "day_two_date = '2016-04-12'"
@@ -41,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "daeb9d85",
    "metadata": {
     "scrolled": true,
@@ -71,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "98a514c6",
    "metadata": {
     "pycharm": {
@@ -146,8 +165,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b7315130",
    "metadata": {
     "pycharm": {
@@ -156,40 +185,31 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "+-------------------+------+--------------+---------------+-----+-----+---+------+---+----+---+-------+----------+\n",
-      "|                 te|    td|            sa|             da|   sp|   dp| pr|   flg|fwd|stos|pkt|    byt|     lable|\n",
-      "+-------------------+------+--------------+---------------+-----+-----+---+------+---+----+---+-------+----------+\n",
-      "|2016-04-11 00:01:34| 5.016| 74.159.162.35|  42.219.155.26|24331|  443|TCP|.AP.S.|  0|   0|  9|   1807|background|\n",
-      "|2016-04-11 00:01:34| 5.400| 165.13.187.32| 42.219.156.211|47976|  443|TCP|.AP.S.|  0|   0| 10|   1662|background|\n",
-      "|2016-04-11 00:01:34| 5.440| 165.13.187.32| 42.219.156.211|47977|  443|TCP|.AP.S.|  0|   0| 10|   1646|background|\n",
-      "|2016-04-11 00:01:34| 5.696|  143.72.8.137| 42.219.156.231|   53|42810|UDP|.A....|  0|   0|  2|    256|background|\n",
-      "|2016-04-11 00:01:34| 5.696| 74.159.140.19|  42.219.155.26|29676|  443|TCP|.AP.S.|  0|   0|  8|   1755|background|\n",
-      "|2016-04-11 00:01:34| 5.896|42.219.153.219|201.172.109.198|   80|56553|TCP|.A..S.|  0|   0|  3|    164|background|\n",
-      "|2016-04-11 00:01:34| 5.896|42.219.153.219|201.172.109.198|   80|56554|TCP|.A..S.|  0|   0|  3|    164|background|\n",
-      "|2016-04-11 00:01:34| 5.896|42.219.153.219|201.172.109.198|   80|56555|TCP|.A..S.|  0|   0|  3|    164|background|\n",
-      "|2016-04-11 00:01:34| 5.984|42.219.153.219|201.172.109.198|   80|56552|TCP|.A..S.|  0|   0|  3|    164|background|\n",
-      "|2016-04-11 00:01:34| 5.996|42.219.159.199|  141.55.255.54| 1027|  161|UDP|.A....|  0|   0| 12|    876|background|\n",
-      "|2016-04-11 00:01:34| 6.016|42.219.159.195|    60.151.58.1|58527|  161|UDP|.A....|  0|   0| 12|    876|background|\n",
-      "|2016-04-11 00:01:34| 6.048|42.219.153.219|201.172.109.198|   80|56547|TCP|.A..S.|  0|   0|  3|    164|background|\n",
-      "|2016-04-11 00:01:34| 6.048|42.219.153.219|201.172.109.198|   80|56549|TCP|.A..S.|  0|   0|  3|    164|background|\n",
-      "|2016-04-11 00:01:35|21.776|42.219.154.182|  202.24.250.22|  993|60455|TCP|.AP...|  0|   0|952|1382188|background|\n",
-      "|2016-04-11 00:01:35|21.824| 202.24.250.22| 42.219.154.182|60455|  993|TCP|.AP...|  0|   0|716|  42470|background|\n",
-      "|2016-04-11 00:01:35| 5.092| 165.13.187.32| 42.219.156.211|47978|  443|TCP|.AP.S.|  0|   0| 10|   1646|background|\n",
-      "|2016-04-11 00:01:35| 5.408|216.60.140.239| 42.219.156.211|59518|  443|TCP|.AP.S.|  0|   0| 10|   1190|background|\n",
-      "|2016-04-11 00:01:35| 5.700|  42.219.153.7| 51.132.127.186|   53|   53|UDP|.A....|  0|   0|  3|    238|background|\n",
-      "|2016-04-11 00:01:35| 6.000|42.219.159.195|  60.151.56.128|58527|  161|UDP|.A....|  0|   0| 12|    876|background|\n",
-      "|2016-04-11 00:01:36|23.732|131.138.113.53|  42.219.153.21|65169|   80|TCP|.AP.S.|  0|   0| 10|   1038|background|\n",
-      "+-------------------+------+--------------+---------------+-----+-----+---+------+---+----+---+-------+----------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "[Stage 2:=>                                                      (24 + 1) / 800]\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [7]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mdf_day_one\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcount\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/anaconda3/envs/stan/lib/python3.8/site-packages/pyspark/sql/dataframe.py:664\u001B[0m, in \u001B[0;36mDataFrame.count\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    654\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcount\u001B[39m(\u001B[38;5;28mself\u001B[39m):\n\u001B[1;32m    655\u001B[0m     \u001B[38;5;124;03m\"\"\"Returns the number of rows in this :class:`DataFrame`.\u001B[39;00m\n\u001B[1;32m    656\u001B[0m \n\u001B[1;32m    657\u001B[0m \u001B[38;5;124;03m    .. versionadded:: 1.3.0\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    662\u001B[0m \u001B[38;5;124;03m    2\u001B[39;00m\n\u001B[1;32m    663\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m--> 664\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mint\u001B[39m(\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_jdf\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcount\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m)\n",
+      "File \u001B[0;32m~/anaconda3/envs/stan/lib/python3.8/site-packages/py4j/java_gateway.py:1308\u001B[0m, in \u001B[0;36mJavaMember.__call__\u001B[0;34m(self, *args)\u001B[0m\n\u001B[1;32m   1301\u001B[0m args_command, temp_args \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_build_args(\u001B[38;5;241m*\u001B[39margs)\n\u001B[1;32m   1303\u001B[0m command \u001B[38;5;241m=\u001B[39m proto\u001B[38;5;241m.\u001B[39mCALL_COMMAND_NAME \u001B[38;5;241m+\u001B[39m\\\n\u001B[1;32m   1304\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcommand_header \u001B[38;5;241m+\u001B[39m\\\n\u001B[1;32m   1305\u001B[0m     args_command \u001B[38;5;241m+\u001B[39m\\\n\u001B[1;32m   1306\u001B[0m     proto\u001B[38;5;241m.\u001B[39mEND_COMMAND_PART\n\u001B[0;32m-> 1308\u001B[0m answer \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgateway_client\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msend_command\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcommand\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1309\u001B[0m return_value \u001B[38;5;241m=\u001B[39m get_return_value(\n\u001B[1;32m   1310\u001B[0m     answer, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mgateway_client, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtarget_id, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mname)\n\u001B[1;32m   1312\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m temp_arg \u001B[38;5;129;01min\u001B[39;00m temp_args:\n",
+      "File \u001B[0;32m~/anaconda3/envs/stan/lib/python3.8/site-packages/py4j/java_gateway.py:1038\u001B[0m, in \u001B[0;36mGatewayClient.send_command\u001B[0;34m(self, command, retry, binary)\u001B[0m\n\u001B[1;32m   1036\u001B[0m connection \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_get_connection()\n\u001B[1;32m   1037\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m-> 1038\u001B[0m     response \u001B[38;5;241m=\u001B[39m \u001B[43mconnection\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msend_command\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcommand\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1039\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m binary:\n\u001B[1;32m   1040\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m response, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_create_connection_guard(connection)\n",
+      "File \u001B[0;32m~/anaconda3/envs/stan/lib/python3.8/site-packages/py4j/java_gateway.py:1205\u001B[0m, in \u001B[0;36mGatewayConnection.send_command\u001B[0;34m(self, command)\u001B[0m\n\u001B[1;32m   1201\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m Py4JNetworkError(\n\u001B[1;32m   1202\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mError while sending\u001B[39m\u001B[38;5;124m\"\u001B[39m, e, proto\u001B[38;5;241m.\u001B[39mERROR_ON_SEND)\n\u001B[1;32m   1204\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m-> 1205\u001B[0m     answer \u001B[38;5;241m=\u001B[39m smart_decode(\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mstream\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreadline\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m[:\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m])\n\u001B[1;32m   1206\u001B[0m     logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAnswer received: \u001B[39m\u001B[38;5;132;01m{0}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(answer))\n\u001B[1;32m   1207\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m answer\u001B[38;5;241m.\u001B[39mstartswith(proto\u001B[38;5;241m.\u001B[39mRETURN_MESSAGE):\n",
+      "File \u001B[0;32m~/anaconda3/envs/stan/lib/python3.8/socket.py:669\u001B[0m, in \u001B[0;36mSocketIO.readinto\u001B[0;34m(self, b)\u001B[0m\n\u001B[1;32m    667\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[1;32m    668\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m--> 669\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_sock\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrecv_into\u001B[49m\u001B[43m(\u001B[49m\u001B[43mb\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    670\u001B[0m     \u001B[38;5;28;01mexcept\u001B[39;00m timeout:\n\u001B[1;32m    671\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_timeout_occurred \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
    "source": [
-    "df_day_one.show()"
+    "df_day_one.count()"
    ]
   },
   {
@@ -207,6 +227,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Next two cells save pyspark session into csv files"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "582feb93",
@@ -222,51 +254,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4affd13f",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "df_day_two.write.csv(day_two_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab4a618f",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "\n",
+    "def aggregate_spark_csv(spark_folder, out_file):\n",
+    "    for f in glob.glob(spark_folder + \"/*.csv\"):\n",
+    "        open(out_file, mode='a').write(open(f, mode='r').read())"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": [
-    "import org.apache.hadoop.conf.Configureation\n",
-    "import org.apache.hadoop.fs[]"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56ea40df",
+   "outputs": [],
+   "source": [
+    "aggregate_spark_csv(day_one_file, day_one_file + '.csv')"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [],
-   "source": []
+   "source": [
+    "aggregate_spark_csv(day_two_file, day_two_file + '.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "conda_stan",
    "language": "python",
-   "name": "python3"
+   "display_name": "Environment (conda_stan)"
   },
   "language_info": {
    "codemirror_mode": {
