--- a/stan_evaluation.ipynb
+++ b/stan_evaluation.ipynb
@@ -36,7 +36,13 @@
     "import seaborn as sns\n",
     "from math import log\n",
     "from tqdm import tqdm\n",
+    "'''\n",
+    "START UP SCRIPT\n",
     "\n",
+    "run this before any other cell\n",
+    "\n",
+    "sets up relative path structure and starts Spark used for preprocessing as well as imports some common modules\n",
+    "'''\n",
     "\n",
     "#start the spark session\n",
     "sc = SparkSession.builder.master(\"local\").appName(\"stan_eval\").getOrCreate()\n",
@@ -55,8 +61,8 @@
     "config.read('ugr16_config.ini')\n",
     "user_list = config['DEFAULT']['userlist'].split(',')\n",
     "\n",
-    "data_path = '/home/ubuntu/Documents/data/'  #linux path for all data files\n",
-    "stan_path = data_path + 'stan/'\n",
+    "data_path = '/home/ubuntu/Documents/data/'  #linux path for all data files that the models access and write too\n",
+    "stan_path = data_path + 'stan/' # path for the model to save checkpoints and various stages for preprocessing\n",
     "\n",
     "part_path_day1 = stan_path + 'partitioned_data/day_1/without_attacks'  #path to data partitioned into IPs\n",
     "part_path_day2 = stan_path + 'partitioned_data/day_2/'  #path to data partitioned into IPs\n",
@@ -70,14 +76,14 @@
     "\n",
     "snth_path = stan_path + 'synthesized_data/'\n",
     "\n",
-    "sngl_rslt_path = rslt_path + 'single_sample/'\n",
-    "full_rslt_path = rslt_path + 'full_sample/'\n",
-    "grph_rslt_path = rslt_path + 'stats_graphs/'\n",
+    "sngl_rslt_path = rslt_path + 'single_sample/' #path for metrics which only looks at the data of a single asset\n",
+    "full_rslt_path = rslt_path + 'full_sample/' #path for metrics considering 100 assets\n",
+    "grph_rslt_path = rslt_path + 'stats_graphs/' #location for images of figures to be saved\n",
     "\n",
     "test_path = data_path + 'test_data/'\n",
     "\n",
-    "real_tst_day1_file = test_path + 'real_april_day1.csv'\n",
-    "real_tst_day2_file = test_path + 'real_april_day2.csv'\n",
+    "real_tst_day1_file = test_path + 'real_april_day1.csv' #real data used for training\n",
+    "real_tst_day2_file = test_path + 'real_april_day2.csv' #real data used for testing\n",
     "snth_tst_file = test_path + 'snth_april_day1_epoch%d.csv'\n",
     "divg_file = rslt_path + 'divergence.csv'\n",
     "\n"
@@ -94,7 +100,7 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "#ensure all folders are in place\n",
+    "#ensure all folders are in place and usable\n",
     "Path(data_path).mkdir(parents=True, exist_ok=True)\n",
     "Path(stan_path).mkdir(parents=True, exist_ok=True)\n",
     "Path(part_path_day1).mkdir(parents=True, exist_ok=True)\n",
@@ -120,7 +126,16 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import log, split, when, array_contains, lag, isnull, floor\n",
+    "'''\n",
+    "PREPROCESSING START\n",
     "\n",
+    "function definition for ingesting UGR data\n",
+    "\n",
+    "pulls all of the real data into spark data frame\n",
+    "grouped by user then time difference between entries is calculated\n",
+    "\n",
+    "then STAN preprocessing takes over creating windows for all the users concatenated into a single file\n",
+    "'''\n",
     "def partition_ugr_data(source_file=raw_file_day1, dest_path=part_path_day1):\n",
     "    local_ip = '42.219'\n",
     "    stan_window = Window.partitionBy('local_ip').orderBy(\"seconds\")\n",
@@ -173,7 +188,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Injest operation that require the data be partitioned by IP and sorted by time and create final dataframe with all neccessary columns to save to file"
+    "Call the ingest function for both days of data which are used"
    ],
    "metadata": {
     "collapsed": false,
@@ -443,7 +458,18 @@
     }
    ],
    "source": [
+    "'''\n",
+    "call to train the model to the given epoch then generate data for the final epoch\n",
     "\n",
+    "The method should have it's own documentation but I will add a short description here\n",
+    "The model will be trained on the windwed-preprocesed data located at 'pre_file'\n",
+    "if checkpoint is higher than 0 it will try to load the specified checkpoint\n",
+    "when the model is trained to 'epochs' it will generate samples for each user in this_ip\n",
+    "since this_ip is not specified here no data will be generated\n",
+    "when data is generated the version of the model currently in memory is used\n",
+    "This will either be the checkpoint loaded or the version of the model that was being trained\n",
+    "the synthesised data is saved to snth_path but the root stan_path is passed to the function\n",
+    "'''\n",
     "df = test.test_ugr16(pre_file, checkpoint=0, epochs=900, sample_duration=86400,\n",
     "                     data_path=stan_path)\n"
    ],
@@ -459,7 +485,11 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "#read preprocesed ugr data into a single file\n",
+    "'''\n",
+    "read preprocessed ugr data into a single file\n",
+    "\n",
+    "used primarily metrics to more easily compare synthetic data to real\n",
+    "'''\n",
     "open(real_tst_day2_file, mode='w').write('')\n",
     "first_file = True\n",
     "for f in glob.glob(part_path_day2 + '**/*.csv'):\n",
@@ -481,6 +511,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "#test cell\n",
     "pd.read_csv(part_path_day1).sort_values(by='seconds')"
    ],
    "metadata": {
@@ -691,6 +722,11 @@
     }
    ],
    "source": [
+    "'''\n",
+    "GENERATE SNYTHETIC DATA\n",
+    "\n",
+    "calls the test method to generate single samples for all specified\n",
+    "'''\n",
     "for epoch in range(85, 400, 5):\n",
     "    crnt_path = snth_path + 'epoch_%s/' % epoch\n",
     "    Path(crnt_path).mkdir(parents=True, exist_ok=True)\n",
